// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppContainer /> snapshot test with footer 1`] = `
<div
  className="components-AppContainer-AppContainer__app--_pvE9"
>
  content
  <footer
    className="components-Footer-Footer__footer--2oWe5"
  >
    © Nationstar Mortgage LLC, All rights reserved
  </footer>
</div>
`;

exports[`<AppContainer /> snapshot test without footer 1`] = `
<div
  className="components-AppContainer-AppContainer__app--_pvE9"
>
  content
</div>
`;
